- improvements and bugfixes to the tierlist maker |- Added/refactored Editing logic (can now edit title and row title, can now delete a specific row) |- If a deleted row contains items, those items are now put back to the items pool instead of being lost to the void |- If an image is very big, it is now contained in a maximum size. Also, it can't overflow the item anymore. |- Other misc css things

--- a/src/app/components/tierlist-maker/tierlist-maker.component.css
+++ b/src/app/components/tierlist-maker/tierlist-maker.component.css
@@ -1,8 +1,29 @@
+  
+  .container{
+    --max-row-height: 8rem;
+    --row-title-width: 8rem;
+  }
 
+  button{
+    background-color: white;
+    border-radius: 0.3rem;
+    border-color : gray;
+    width: fit-content;
+    height: fit-content;
+  }
+  
   .tierlist-container{
     display: flex;
     flex-direction: column;
     user-select: none; /* to disable text selection within items. When dragging elements quickly, lots of misclicks that select text, then need to click outside, etc. It's too akward to use, so disabled here for better ux */
+  }
+
+  .row-container{
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    min-height: 8rem;
+    gap:0.25rem
   }
 
   .row-items {
@@ -10,7 +31,7 @@
     flex-wrap: wrap;
     min-width: 8rem;
     min-height: 8rem;
-    max-width: 100%;
+    width: 100%;
     gap: 1rem;
     padding: 1rem;
     border: solid 0.1rem #ccc;
@@ -22,21 +43,32 @@
   }
   
   .item-tierlist {
+    display: flex;
+    flex-direction: column;
     padding: 1.25rem 0.625rem; /* 20px, 10px*/
     border: solid 0.2rem #ccc;
     border-radius: 0.4rem;
     color: var(--mainTextColor);
-    display: inline-block;
     box-sizing: border-box;
     cursor: move;
     background: white;
     text-align: center;
     font-size: 1rem;
 
+    height: fit-content;
     min-width: 7rem;
     min-height: 7rem;
     max-width: 12rem;
     max-height: 12rem;
+  }
+
+  .item-tierlist-image{
+    height: fit-content;
+    max-height: 100%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    overflow: hidden;
   }
   
   .cdk-drag-preview {
@@ -56,3 +88,60 @@
   .cdk-drag-animating {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
+
+  .buttons-container{
+    padding : 1rem;
+    display: flex;
+    gap : 1rem;
+    width: fit-content;
+  }
+
+  .title-bar{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap :0.5rem;
+  }
+  
+  .title-bar-right {
+    margin-left: auto; /* Push the button to the right */
+  }
+
+  .title-input{
+    font-size:2rem;
+    height: fit-content;
+    width: fit-content;
+    color:grey;
+  }
+
+  .tierlist-title{
+    font-size:2rem;
+    font-weight: bold;
+    height: 100%;
+    max-height: 10rem;
+    width: fit-content;
+  }
+
+  .row-title-container{
+    height: 100%;
+    width: var(--row-title-width);
+    overflow : hidden;
+		text-overflow: clip;
+    overflow-wrap: break-word;
+    user-select: text;
+  }
+
+  .row-title{
+    font-size: 1.5rem;
+    max-width: var(--row-title-width); 
+    width: 100%;
+    height: 100%;
+    padding: 0.5rem;
+  }
+
+  .row-title-textarea-input{
+    font-size: 1.5rem;
+    color: gray;
+    max-width: 100%;
+  }
+
